# bignum

./: CMakeLists.txt  README.md  bignum.cpp  test.cpp
inc/: bignum.h
src/: bignum.cpp
